force-app/main/default/objects/ChatMessage__c/ChatMessage__c.object-meta.xml
<CustomObject>
    <description>Chat message for custom chat.</description>
    <label>Chat Message</label>
    <pluralLabel>Chat Messages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <nameField>
        <displayFormat>CM-{000000}</displayFormat>
        <label>Message Number</label>
        <type>AutoNumber</type>
    </nameField>
</CustomObject>