force-app/main/default/objects/ChatMessage__c/fields/ExternalMessageId__c.field-meta.xml
<CustomField>
    <fullName>ExternalMessageId__c</fullName>
    <externalId>true</externalId>
    <label>External Message Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>