force-app/main/default/objects/ChatMessage__c/fields/PostedAt__c.field-meta.xml
<CustomField>
    <fullName>PostedAt__c</fullName>
    <label>Posted At</label>
    <type>DateTime</type>
</CustomField>