force-app/main/default/objects/ChatMessage__c/fields/PostedBy__c.field-meta.xml
<CustomField>
    <fullName>PostedBy__c</fullName>
    <label>Posted By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Messages Posted</relationshipLabel>
    <relationshipName>Messages_Posted</relationshipName>
    <type>Lookup</type>
</CustomField>