force-app/main/default/objects/ChatMessage__c/fields/ReplyTo__c.field-meta.xml
<CustomField>
    <fullName>ReplyTo__c</fullName>
    <label>Reply To</label>
    <referenceTo>ChatMessage__c</referenceTo>
    <relationshipLabel>Replies</relationshipLabel>
    <relationshipName>Replies</relationshipName>
    <type>Lookup</type>
</CustomField>