force-app/main/default/objects/ChatMessage__c/fields/Thread__c.field-meta.xml
<CustomField>
    <fullName>Thread__c</fullName>
    <description>Parent Chat Thread</description>
    <label>Thread</label>
    <referenceTo>ChatThread__c</referenceTo>
    <relationshipLabel>Messages</relationshipLabel>
    <relationshipName>Messages</relationshipName>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>